# mothership-gui

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  mothership.db  template.c  template.h  test.sql  valgrind.sh
include/: EdsacErrorNotebook.h  node_setup.h  sql.h  ui.h
src/: EdsacErrorNotebook.c  main.c  node_setup.c  sql.c  ui.c
src/test/: add_errors.c  sql-test.c
